# VTFParser

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  DoxygenLayout.xml  README.md  VTFParser.cpp  VTFParser.h  VTFParser.hpp  premake5.lua  premake5_include.lua
DXTn/: DXT1.cpp  DXT3.cpp  DXT5.cpp  DXTn.h
FileFormat/: Enums.h  Parser.cpp  Parser.h  Structs.h
src/: colours.hpp  errors.hpp  vtf.cpp  vtf.hpp
src/dxt/: dxt.hpp  dxt1.cpp  dxt3.cpp  dxt5.cpp  structs.hpp
src/file-format-objects/: enums.hpp  header.hpp
src/helpers/: check-bounds.hpp  offset-data-view.cpp  offset-data-view.hpp
